tests/fail/missing_fmt_string.rs
#[log_attributes::log(info)]
fn missing_fmt_string() {}

fn main() {}
